--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
 header {
   text-align: center;
 }
+
+h1 {
+  color: rgba(0, 0, 0, 0.8);
+}
 section.body {
   width: 90%;
   margin: 0px auto;
@@ -26,6 +30,10 @@ table {
   border-collapse: collapse;
   width: 100%;
   margin: 10px 0px;
+}
+table th {
+  background-color: #777;
+  color: white;
 }
 
 th,
