--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,13 @@ ul > li {
   width: 80px;
   text-align: center;
 }
+a,
+a:active,
+a:hover,
+a:focus {
+  color: black;
+  text-decoration: none;
+}
 .card {
   border: solid 1px #999;
   border-radius: 8px;
@@ -54,6 +61,9 @@ td {
 }
 tr > td {
   padding: 10px;
+}
+tr:hover {
+  background-color: yellow;
 }
 td.id {
   width: 120px;
