--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
 header {
   text-align: center;
 }
+section.body {
+  width: 90%;
+  margin: 0px auto;
+}
 
 h1 {
   color: rgba(0, 0, 0, 0.8);
