--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,8 @@ nav {
 ul {
   list-style: none;
   padding: 0px;
+  display: flex;
+  justify-content: space-between;
 }
 ul > li {
   display: inline-block;
@@ -39,11 +41,7 @@ a:focus {
   color: black;
   text-decoration: none;
 }
-.card {
-  border: solid 1px #999;
-  border-radius: 8px;
-  width: 250px;
-}
+
 input[type="text"] {
   width: 200px;
   height: 25px;
@@ -81,6 +79,17 @@ td.company {
 td.price {
   width: 100px;
   text-align: right;
+}
+.card-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.card {
+  border: solid 1px #999;
+  border-radius: 8px;
+  width: 250px;
 }
 
 footer {
