feat(header):導覽列樣式設定

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -23,9 +23,30 @@ header {
         color: #137fec;
       }
       > div {
+        display: flex;
+        align-items: center;
+
+        &.left {
+          gap: 2rem;
+        }
+
+        &.right {
+          gap: 0.5rem;
+        }
       }
-      display: flex;
-      gap: 0.5rem;
+      nav {
+        display: flex;
+        gap: 1.5rem;
+
+        a {
+          color: #4b5563;
+          text-decoration: inherit;
+
+          &:hover {
+            color: #137fec;
+          }
+        }
+      }
     }
   }
 }
