--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,5 +1,5 @@
 header {
-  border-bottom: solid 1px #e5e7eb;
+  border-bottom: solid 1px var(--border-color);
 
   div.container {
     max-width: 90vw;
@@ -20,7 +20,7 @@ header {
         font-size: 1.25rem;
         font-weight: 700;
         line-height: 1.75rem;
-        color: #137fec;
+        color: var(--primary-color);
       }
       > div {
         display: flex;
@@ -39,7 +39,7 @@ header {
         gap: 1.5rem;
 
         a {
-          color: #4b5563;
+          color: var(--text-color);
           text-decoration: inherit;
 
           &:hover {
@@ -58,7 +58,7 @@ header {
           width: 200px;
           padding: 1rem 0.5rem 1rem 1rem;
           border: none;
-          background-color: #f3f4f6;
+          background-color: var(--gray-color-100);
 
           &:focus {
             outline: none;
@@ -69,7 +69,7 @@ header {
           border-bottom-right-radius: 1rem;
           padding: 0.5rem;
           border: none;
-          background-color: #f3f4f6;
+          background-color: var(--gray-color-100);
           cursor: pointer;
         }
       }
