--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -73,6 +73,15 @@ header {
           cursor: pointer;
         }
       }
+
+      button {
+        background-color: transparent;
+        padding: 0.5rem;
+        border: none;
+        cursor: pointer;
+
+        color: var(--text-color);
+      }
     }
   }
 }
