FEAT(FOOTER):導覽列設定樣式實作

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -4,12 +4,36 @@ footer {
   div.container {
     max-width: 90vw;
     margin: 0px auto;
+
     padding-left: 2rem;
     padding-right: 2rem;
 
-    p {
-      color: var(--text-color);
-      font-size: 0.875rem;
+    > div {
+      height: 4rem;
+
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      > div {
+        display: flex;
+        gap: 1.5rem;
+
+        > a {
+          color: var(--text-color);
+          text-decoration: inherit;
+
+          &:hover {
+            color: var(--primary-color);
+          }
+        }
+      }
+
+      p {
+        color: var(--text-color);
+        font-size: 0.875rem;
+        line-height: 1.25rem;
+      }
     }
   }
 }
