--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -43,7 +43,7 @@ header {
           text-decoration: inherit;
 
           &:hover {
-            color: #137fec;
+            color: var(--primary-color);
           }
         }
       }
