--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,87 +1,72 @@
 header {
   border-bottom: solid 1px var(--border-color);
 
-  div.container {
-    max-width: 90vw;
-    height: 4rem;
-    margin: 0px auto;
+  h3 {
+    margin: 0px;
+    font-size: 1.25rem;
+    font-weight: 700;
+    line-height: 1.75rem;
+    color: var(--primary-color);
+  }
+  nav {
+    display: flex;
+    gap: 1.5rem;
 
-    padding-left: 2rem;
-    padding-right: 2rem;
+    a {
+      color: var(--text-color);
+      text-decoration: inherit;
 
-    > div {
-      height: 4rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-
-      h3 {
-        margin: 0px;
-        font-size: 1.25rem;
-        font-weight: 700;
-        line-height: 1.75rem;
+      &:hover {
         color: var(--primary-color);
       }
-      > div {
-        display: flex;
-        align-items: center;
+    }
+  }
 
-        &.left {
-          gap: 2rem;
-        }
+  div {
+    display: flex;
+    align-items: center;
 
-        &.right {
-          gap: 0.5rem;
-        }
-      }
-      nav {
-        display: flex;
-        gap: 1.5rem;
+    &.left {
+      gap: 2rem;
+    }
 
-        a {
-          color: var(--text-color);
-          text-decoration: inherit;
+    &.right {
+      gap: 0.5rem;
+    }
 
-          &:hover {
-            color: var(--primary-color);
-          }
-        }
-      }
+    &.search {
+      display: flex;
+      gap: 0;
 
-      div.search {
-        display: flex;
-        gap: 0;
+      input {
+        border-top-left-radius: 1rem;
+        border-bottom-left-radius: 1rem;
+        width: 200px;
+        padding: 1rem 0.5rem 1rem 1rem;
+        border: none;
+        background-color: var(--gray-color-100);
 
-        input {
-          border-top-left-radius: 1rem;
-          border-bottom-left-radius: 1rem;
-          width: 200px;
-          padding: 1rem 0.5rem 1rem 1rem;
-          border: none;
-          background-color: var(--gray-color-100);
-
-          &:focus {
-            outline: none;
-          }
-        }
-        button {
-          border-bottom-right-radius: 1rem;
-          border-bottom-right-radius: 1rem;
-          padding: 0.5rem;
-          border: none;
-          background-color: var(--gray-color-100);
-          cursor: pointer;
+        &:focus {
+          outline: none;
         }
       }
-
       button {
-        background-color: transparent;
+        border-bottom-right-radius: 1rem;
+        border-bottom-right-radius: 1rem;
         padding: 0.5rem;
         border: none;
+        background-color: var(--gray-color-100);
         cursor: pointer;
-
-        color: var(--text-color);
       }
     }
+  }
+
+  button {
+    background-color: transparent;
+    padding: 0.5rem;
+    border: none;
+    cursor: pointer;
+
+    color: var(--text-color);
   }
 }
