--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -3,7 +3,24 @@ section {
   flex-direction: column;
   min-height: 100vh;
 
-  div.main {
-    flex-grow: 1;
+  div {
+    &.container {
+      max-width: 90vw;
+      margin: 0px auto;
+
+      padding-left: 2rem;
+      padding-right: 2rem;
+
+      > div {
+        height: 4rem;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+    }
+    &.main {
+      flex-grow: 1;
+    }
   }
 }
