refactor(a)重構超連結樣式設定

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -24,3 +24,11 @@ section {
     }
   }
 }
+a {
+  color: var(--text-color);
+  text-decoration: inherit;
+
+  &:hover {
+    color: var(--primary-color);
+  }
+}
