feat(aside):設定書籍分類固定位置

--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -12,6 +12,10 @@ div.main {
   aside {
     width: 20%;
     flex-shrink: 0;
+
+    position: sticky;
+    top: 6rem;
+
     h3 {
       margin: 0;
       font-weight: 500;
